--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -155,6 +155,7 @@
   "team.slctd": "selected",
   "team.add": "Add",
   "team.nosearchfnd": "No teams found matching your search criteria",
+  "adset.no_teams":"No teams found",
 
   "icon.search": "Search Icons",
 
