Language Fix ; Color Preservation
-Small Language Fix.
-Color of Task List's are now preserved.

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -745,6 +745,7 @@
   "faq.title": "Frequently Asked Questions",
   "faq.subtitle": "Find answers to the most common questions about PlanWise.",
 
+  "invitation.title": "Invitation",
   "invitation.declined": "Invitation Declined",
   "invitation.accepted": "Invitation Accepted",
 
