--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -712,6 +712,7 @@
   "faq.title": "Sıkça Sorulan Sorular",
   "faq.subtitle": "PlanWise hakkında en yaygın soruların cevaplarını bulun.",
 
+  "invitation.title": "Davetiye",
   "invitation.declined": "Davet Reddedildi",
   "invitation.accepted": "Davet Kabul Edildi",
 
