--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -66,7 +66,7 @@
 
   "toggle.h": "Horizontal",
   "toggle.v": "Vertical",
-
+  "sidebar.chat": "Chat",
   "prode.create": "Create Category",
   "prode.search": "Search categories, tasks, entries...",
   "prode.new": "New Categorizer",
