Notes Page Translated ; UI Changes
-Notes page fully translated.
-Separated colors of Notes page and Chat page.

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -775,6 +775,35 @@
   "invitationresponse.inv": "You've been invited to join a project 🎯",
   "invitationresponse.invttl": "Project Invitation ✨",
 
+  "notes.title": "Notes",
+  "notes.addNote": "Add Note",
+  "notes.search": "Search notes...",
+  "notes.personal": "Personal",
+  "notes.shared": "Shared",
+  "notes.recent": "Recent",
+  "notes.color": "Color",
+  "notes.newnote": "New Note",
+  "notes.nonotesttl": "No Notes Found",
+  "notes.nonotes": "Create your first note to get started",
+  "notes.createnote": "Create New Note",
+  "notes.create": "Create Note",
+  "notes.readmore": "Read more",
+  "notes.share": "Share",
+  "notes.nopersonal": "No personal notes found",
+  "notes.content": "Note content",
+  "notes.editttlfield": "Note title",
+  "notes.ttl": "Title",
+  "notes.notecolor": "Note Color",
+  "notes.pinnote": "Pin Note",
+  "notes.sharewteam": "Share with Team",
+  "notes.updated": "Updated",
+  "notes.unpin": "Unpin note",
+  "notes.pin": "Pin note",
+  "notes.edit": "Edit note",
+  "notes.delete": "Delete note",
+  "notes.sharenote": "Share note",
+  "notes.editnotecptl": "Edit Note",
+
   "activity": {
     "system": "PlanWise",
     "project": {
