--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -743,6 +743,35 @@
   "invitationresponse.inv": "Bir projeye katılmaya davet edildiniz 🎯",
   "invitationresponse.invttl": "Proje Davetiyesi ✨",
 
+  "notes.title": "Notlar",
+  "notes.addNote": "Not Ekle",
+  "notes.search": "Notları arat...",
+  "notes.personal": "Kişisel",
+  "notes.shared": "Paylaşılmış",
+  "notes.recent": "Yakında",
+  "notes.color": "Renk",
+  "notes.newnote": "Yeni Not",
+  "notes.nonotesttl": "Not Bulunamadı",
+  "notes.nonotes": "Başlamak için ilk notunu oluştur",
+  "notes.createnote": "Yeni Not Oluştur",
+  "notes.create": "Not Oluştur",
+  "notes.readmore": "Devamını oku",
+  "notes.share": "Paylaş",
+  "notes.nopersonal": "Kişisel not bulunamadı",
+  "notes.content": "Not içeriği",
+  "notes.editttlfield": "Not başlığı",
+  "notes.ttl": "Başlık",
+  "notes.notecolor": "Not Rengi",
+  "notes.pinnote": "Not Sabitle",
+  "notes.sharewteam": "Takım ile Paylaş",
+  "notes.updated": "Son Güncellenme",
+  "notes.unpin": "Sabitlemeyi kaldır",
+  "notes.pin": "Sabitle",
+  "notes.edit": "Notu düzenle",
+  "notes.delete": "Notu sil",
+  "notes.sharenote": "Notu paylaş",
+  "notes.editnotecptl": "Notu Düzenle",
+
   "activity": {
     "system": "PlanWise",
     "project": {
