Colors for Notes and a few translations

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -17,6 +17,12 @@
     "track": "On Track"
   },
 
+  "notes":{
+    "error":"Error loading notes",
+    "confirm":"Confirmation",
+    "conMess":"Are you sure you want to delete"
+  },
+
   "cal": {
     "due_in": "due in",
     "days": "days",
