Language for chat

--- a/src/languages/tr.json
+++ b/src/languages/tr.json
@@ -23,6 +23,63 @@
     "conMess":"Silmek istediğinizden emin misiniz:"
   },
 
+
+  "chat": {
+    "poll": "Anket Oluştur",
+    "option": "Seçenek Ekle",
+    "create": "Anket Oluştur",
+    "format": "Kod Biçimlendirme",
+    "language": "Dil",
+    "text": "Aşağıya kod ekleyin, kod bloğu olarak biçimlendirilecektir",
+    "record": "Ses kaydı",
+    "voice": "Sesli Mesaj",
+    "emoji": "Yaygın emojiler",
+    "chat": "Sohbet",
+    "channels": "Proje Kanalları",
+    "teamchan": "Takım Kanalları",
+    "loading": "Mesajlar yükleniyor",
+    "reply": "Yanıtlanıyor",
+    "error": "Mikrofona erişim hatası:",
+    "error2": "Mikrofona erişilemedi. Lütfen izinleri kontrol edin.",
+    "errpoll": "Anket oluşturma hatası:",
+    "errpoll2": "Anket oluşturulamadı. Lütfen tekrar deneyin.",
+    "unknown": "Bilinmeyen Kullanıcı",
+    "fill": "Lütfen tüm anket alanlarını doldurun",
+    "delerr": "Mesaj silme hatası:",
+    "delerr2": "Mesaj silinemedi. Lütfen tekrar deneyin.",
+    "editerr": "Mesaj düzenleme hatası:",
+    "editerr2": "Mesaj düzenlenemedi. Lütfen tekrar deneyin.",
+    "reacterr": "Reaksiyon kaldırma hatası:",
+    "reacterr2": "Reaksiyon kaldırılamadı. Lütfen tekrar deneyin.",
+    "reacterr3": "Reaksiyon işleme hatası:",
+    "reacterr4": "Reaksiyon güncellenemedi. Lütfen tekrar deneyin.",
+    "fileerr": "Dosya yükleme hatası:",
+    "chunk": "Tüm parçalar başarıyla gönderildi:",
+    "chunkerr": "Sesli mesaj yükleme hatası:",
+    "chunkerr2": "Sesli mesaj yüklenemedi. Lütfen tekrar deneyin.",
+    "messerr": "Mesaj gönderme hatası:",
+    "messerr2": "Mesaj gönderilemedi. Lütfen tekrar deneyin.",
+    "read": "Kanal okunmuş olarak işaretlenemedi:",
+    "fetcherr": "Mesajları getirme hatası:",
+    "loaderr": "Mesajlar yüklenemedi",
+    "select": "Sohbet etmek için bir kanal seçin",
+    "only": "Yalnızca Üyeler",
+    "empty": "Henüz mesaj yok. Sohbeti başlatın!",
+    "search": "Kanallarda ara...",
+    "type": "Bir mesaj yazın...",
+    "paste": "Kodu buraya yazın veya yapıştırın...",
+    "searchmess": "Mesajlarda ara...",
+    "opp": "Seçenek",
+    "poll2": "Anket sorusu",
+    "save": "Kaydet",
+    "cancel": "İptal",
+    "votes": "oy",
+    "vote": "Oyla",
+    "total": "Toplam oy:",
+    "voicemess": "Sesli mesaj"
+  },
+
+
   "cal": {
     "due_in": "",
     "days": "gün içinde teslim",
