--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -33,6 +33,61 @@
     "days_overdue": "days overdue"
   },
 
+  "chat": {
+    "poll": "Create Poll",
+    "option":"Add Option",
+    "create":"Create Poll",
+    "format":"Code Formatting",
+    "language":"Language",
+    "text":"Add code below and it will be formatted as a code block",
+    "record":"Recording audio",
+    "voice":"Voice Message",
+    "emoji":"Common emojis",
+    "chat":"Chat",
+    "channels":"Project Channels",
+    "teamchan":"Team Channels",
+    "loading":"Loading messages",
+    "reply":"Replying to",
+    "error":"Error accessing microphone:",
+    "error2":"Could not access microphone. Please check permissions.",
+    "errpoll":"Error creating poll:",
+    "errpoll2":"Failed to create poll. Please try again.",
+    "unknown":"Unknown User",
+    "fill":"Please fill in all poll fields",
+    "delerr":"Error deleting message:",
+    "delerr2":"Failed to delete message. Please try again.",
+    "editerr":"Error editing message:",
+    "editerr2":"Failed to edit message. Please try again.",
+    "reacterr":"Error removing reaction:",
+    "reacterr2":"Failed to remove reaction. Please try again.",
+    "reacterr3":"Error handling reaction:",
+    "reacterr4":"Failed to update reaction. Please try again.",
+    "fileerr":"Error uploading file:",
+    "chunk":"All chunks sent successfully to",
+    "chunkerr":"Error uploading audio message:",
+    "chunkerr2":"Failed to upload audio message. Please try again.",
+    "messerr":"Error sending message:",
+    "messerr2":"Failed to send message. Please try again.",
+    "read":"Could not mark channel as read:",
+    "fetcherr":"Error fetching messages:",
+    "loaderr":"Failed to load messages",
+    "select":"Select a channel to start chatting",
+    "only":"Members Only",
+    "empty":"No messages yet. Start the conversation!",
+    "search":"Search channels...",
+    "type":"Type a message...",
+    "paste":"Type or paste code here...",
+    "searchmess":"Search messages...",
+    "opp":"Option",
+    "poll2":"Poll question",
+    "save":"Save",
+    "cancel":"Cancel",
+    "votes":"votes",
+    "vote":"Vote",
+    "total":"Total votes:",
+    "voicemess":"Voice message"
+  },
+
   "sidebar.user": "User",
   "sidebar.dash": "Dashboard",
   "sidebar.gantt": "Gantt Chart",
