--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -53,7 +53,10 @@
     "react": "Reactions",
     "obj": "Objects",
     "chat": "Chat",
+    "edited": "Edited",
+    "replied": "replied",
     "channels": "Project Channels",
+    "teamchati": "Chat",
     "teamchan": "Team Channels",
     "loading": "Loading messages",
     "reply": "Replying to",
